Created django forms

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -4,7 +4,7 @@
   {% csrf_token %}
 
   <!-- TODO: Replace with your form fields here. -->
-  {{form.demo_field}}
+  {{form.as_p}}
 
   <input type="submit" value="Submit Here">
 </form>
